RESOLVED FIXED155935
[ATK] accessibility/aria-current-global-attribute.html has been failed since r198303
https://bugs.webkit.org/show_bug.cgi?id=155935
Summary [ATK] accessibility/aria-current-global-attribute.html has been failed since ...
Gyuyoung Kim
Reported 2016-03-27 19:09:22 PDT
SSIA.
Attachments
Patch (3.69 KB, patch)
2016-04-28 09:35 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2016-04-28 09:27:21 PDT
Joanmarie Diggs
Comment 2 2016-04-28 09:35:54 PDT
Joanmarie Diggs
Comment 3 2016-04-29 07:46:34 PDT
Chris: This should be a quick/simple review. And the bug this failure exposes is potentially significant with respect to non-focusable 'span' elements with global ARIA attributes. :( Thanks in advance!
WebKit Commit Bot
Comment 4 2016-04-29 09:38:31 PDT
Comment on attachment 277627 [details] Patch Clearing flags on attachment: 277627 Committed r200244: <http://trac.webkit.org/changeset/200244>
WebKit Commit Bot
Comment 5 2016-04-29 09:38:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.